--- a/wonder/romeo/static/scss/specifics/video/_video-indicators.scss
+++ b/wonder/romeo/static/scss/specifics/video/_video-indicators.scss
@@ -8,6 +8,7 @@
 }
 
 .video-indicators__comment-indicators {
+  list-style: none;
   position: relative;
   margin: 0;
 }
